Minor CSS changes to temporarily fix overflowing table. Minor syntax formatting as well.

--- a/src/components/Web3Display.css
+++ b/src/components/Web3Display.css
@@ -2,11 +2,9 @@
     font-family: 'Roboto Mono', monospace;
   }
   .container {
-    display: flex;
-  justify-content: center;
-  align-items: center;
-    height: 80vh;
+    /*display: flex;*/
+    /*height: 80vh;*/
     background-color: #F4F5F4;
-    padding-bottom: 8.5rem; 
-    
+    padding-bottom: 8.5rem;
+
   }
